# hermes-upload-samples

./: .gitignore  README.md
C#/: README.md
C#/ResumableUpload/: Program.cs  ResumableUpload.csproj
C#/ResumableUpload/Properties/: launchSettings.json
Go/: README.md
Go/resumable-upload/: resumable-upload.go
Java/: README.md
Java/ResumableUpload/src/com/ResumableUpload/: Arguments.java  Log.java  ResumableUpload.java
NodeJS/: README.md  app.js  package-lock.json  package.json
Python/: README.md  app.py  requirements.txt
Rust/: README.md
Rust/resumable-upload/: Cargo.toml
Rust/resumable-upload/src/: args.rs  errors.rs  log.rs  main.rs
