[package]
name = "resumable-upload"
version = "0.1.0"
authors = ["Meenakshi Sundaram V <sundaram.viswanathan@ecyber.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.9.3"
reqwest = { version = "0.10", features = ["blocking", "json"] }
uuid = { version = "0.8", features = ["v4"] }